--- a/GitPractice/.gitignore
+++ b/GitPractice/.gitignore
@@ -1,4 +1,16 @@
+# Eclipse Project #
+
 /bin/
 .classpath
 .project
+#셋팅 파일 내부에 있다#
 /.settings/
+
+# Package Files #
+*.jar
+*.war
+*.nar
+*.ear
+*.zip
+*.tar.gz
+*.rar
